# geometry_common

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  package.xml
include/geometry_common/: Box2D.h  Box3D.h  Circle.h  Enums.h  LineSegment2D.h  Point2D.h  Point3D.h  PointCloudProjector.h  Polygon2D.h  Polyline2D.h  Pose2D.h  TransformMatrix2D.h  TransformMatrix3D.h  Utils.h  XYTheta.h
src/: Box2D.cpp  Box3D.cpp  Circle.cpp  LineSegment2D.cpp  Point2D.cpp  Point3D.cpp  PointCloudProjector.cpp  Polygon2D.cpp  Polyline2D.cpp  Pose2D.cpp  TransformMatrix2D.cpp  TransformMatrix3D.cpp  Utils.cpp  XYTheta.cpp
test/: CMakeLists.txt  circle_test.cpp  line_segment_2d_test.cpp  point_3d_test.cpp  polygon_2d_test.cpp  pose_2d_test.cpp  transform_3d_test.cpp  utils_test.cpp
