<?xml version="1.0"?>
<package format="3">
    <name>geometry_common</name>
    <version>0.1.0</version>
    <description>Common data structures, utilities and modules for geometric tasks</description>

    <author email="dharmingeo@gmail.com">Dharmin B.</author>
    <author email="sushant.chavan@kelo-robotics.com">Sushant Chavan</author>

    <maintainer email="dharmingeo@gmail.com">Dharmin B.</maintainer>

    <license>LGPL/BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
